# TFIDF-Compliance-Drift

./: .gitignore  ARCHITECTURE.md  AUDIT_SUMMARY.md  CODE_FIX_EXAMPLES.md  DEAD_CODE_AUDIT.md  DOCUMENTATION_INDEX.md  EXPERIMENTS_NOTEBOOK_SUMMARY.md  HARDENING_COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LOGGING_GUIDE.md  MASTER_SUMMARY.md  NOTEBOOK_EXPERIMENTS_GUIDE.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_TEST_COMPATIBILITY.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROJECT_FILE_INVENTORY.md  QUICK_FIX_GUIDE.md  QUICK_START_TESTING.sh  README.md  REFACTORING_ROADMAP.md  SECURITY_HARDENING.md  SECURITY_QUICK_REFERENCE.md  SECURITY_VALIDATION.md  SESSION_COMPLETION_SUMMARY.md  SESSION_SUMMARY.md  TECHNICAL_AUDIT_REPORT.md  cleanup_old_files.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_validate.py
.github/: copilot-instructions.md
backend/: __init__.py  classification.py  clustering.py  config.py  document_categorization.py  report_generator.py  similarity.py  text_processing.py  tfidf_engine.py  utils.py
dashboard/: app.py
data/: metadata.csv  sample_data.py
data/internal/: aml_customer_due_diligence_procedure_v1.txt  consent_v1.txt  consent_v2.txt  consent_v3.txt  criminal_case_intake_procedure_v1.txt  criminal_incident_response_protocol_v1.txt  cyber_data_access_control_policy_v1.txt  financial_transaction_monitoring_policy_v1.txt  information_security_incident_response_plan_v1.txt  sop_v1.txt
data/reference/: guideline_01.txt  guideline_02.txt  guideline_03.txt
frontend/: __init__.py  app.py
frontend/components/: classification_tab.py  header.py  (+7 more)
notebooks/: experiments.ipynb  maths_derivations.ipynb
scripts/: audit_repo.py  pdf_to_txt_once.py  run_streamlit.ps1  run_tests.ps1
src/: __init__.py  alerts.py  drift.py  manual_tfidf_math.py  preprocess.py  similarity.py  utils.py  vectorize.py
tests/: __init__.py  conftest.py  test_classification.py  test_clustering.py  test_edge_cases.py  test_file_loader.py  test_input_validation.py  test_preprocessing.py  test_similarity.py  test_tfidf_math.py
utils/: file_loader.py  logging_setup.py
(+5 files in other folders)
