[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfidf-compliance-drift"
version = "1.0.0"
description = "TF-IDF based Compliance Drift Monitoring System with from-scratch math implementation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "streamlit>=1.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "nltk>=3.7",
    "pdfplumber>=0.7.0",
    "pdf2image>=1.16.0",
    "pytesseract>=0.3.10",
    "pillow>=9.0.0",
    "reportlab>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=22.0",
    "isort>=5.10",
    "flake8>=4.0",
    "mypy>=0.950",
]

test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
    "edge_case: edge case tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.pytest.ini_options.coverage]
run = {
    branch = true,
    source = ["src", "dashboard"],
}
report = {
    precision = 2,
    show_missing = true,
    skip_covered = false,
}
html = {directory = "htmlcov"}

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
